fix z-index messing stuff up

--- a/frontend/src/app/components/normalize-schema-graph/normalize-schema-graph.component.css
+++ b/frontend/src/app/components/normalize-schema-graph/normalize-schema-graph.component.css
@@ -4,4 +4,5 @@
     display: inline-block;
     background: transparent;
     overflow: hidden;
+    z-index: 0;
 }
